fix: tooltip width on narrow screen and add CojVersionType in mock data

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1126,7 +1126,12 @@ html:has(dialog[data-cy="formLinkerModal"][open]) {
 }
 
 .tooltipContent {
-  max-width: 350px;
+  max-width: 500px;
   line-height: 1.8;
   z-index: 99;
+}
+@media (max-width: 500px) {
+  .tooltipContent {
+    max-width: 100%;
+  }
 }
